--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./twitchbe/Dockerfile
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/twitch
       SPRING_DATASOURCE_USERNAME: root
@@ -28,6 +28,17 @@ services:
       - "8080:8080"
     depends_on:
       - db
+    networks:
+      - app-network
+
+  frontend:
+    build:
+      context: .
+      dockerfile: ./twitchfe/Dockerfile
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
     networks:
       - app-network
 
