--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -38,6 +38,12 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      - name: Create ECR repositories if they don't exist
+        run: |
+          # Check if repositories exist, create if they don't
+          aws ecr describe-repositories --repository-names frontend || aws ecr create-repository --repository-name frontend || true
+          aws ecr describe-repositories --repository-names backend || aws ecr create-repository --repository-name backend || true
+
       # Add missing babel plugin for CRA
       - name: Install Missing Dependencies
         run: |
@@ -117,96 +123,114 @@ jobs:
           });
           EOF
 
-      - name: Build and Test Frontend
+      - name: Build Frontend with debugging
         run: |
-          # Create dedicated mocks directory
-          mkdir -p ./twitchfe/src/__mocks__
+          # Show Docker version and system info
+          docker --version
+          df -h
 
-          # Create antdMocks.js
-          cat > ./twitchfe/src/__mocks__/antdMocks.js << 'EOF'
-          // Mock specific behavior of Ant Design's responsive observer
+          # List directories to verify structure
+          echo "Project structure:"
+          ls -la
+          echo "Frontend directory contents:"
+          ls -la twitchfe/
 
-          // Mock for window.matchMedia with better implementation
-          window.matchMedia = jest.fn().mockImplementation(query => ({
-            matches: false,
-            media: query,
-            onchange: null,
-            // These are the important ones - implement them as proper functions
-            addListener: function(listener) {
-              this.listener = listener;
-            },
-            removeListener: function(listener) {
-              this.listener = null;
-              },
-              addEventListener: jest.fn(),
-              removeEventListener: jest.fn(),
-              dispatchEvent: jest.fn(),
-            }));
-            
-            // Mock for ResizeObserver
-            global.ResizeObserver = class ResizeObserver {
-              constructor(callback) {
-                this.callback = callback;
-              }
-              observe() {}
-              unobserve() {}
-              disconnect() {}
-            };
-            EOF
-            
-            # Update setupTests.js
-            cat > ./twitchfe/src/setupTests.js << 'EOF'
-            // Import Jest DOM extensions
-            import '@testing-library/jest-dom';
-            import './__mocks__/antdMocks'; // Import our Ant Design mocks
-            
-            // Suppress React 18 warnings during tests
-            const originalError = console.error;
-            console.error = (...args) => {
-              // Suppress specific warnings that are not relevant to tests
-              if (args[0]?.includes('Warning: ReactDOM.render is no longer supported in React 18') ||
-                  args[0]?.includes('Warning: [antd:') ||
-                  args[0]?.includes('Warning: `ReactDOMTestUtils.act`')) {
-                return;
-              }
-              originalError(...args);
-            };
-            EOF
-            
-            # Just skip tests in CI for now to move the pipeline forward
-            # This is a temporary solution until we can fix the tests properly
-            docker build -t frontend-test:latest -f twitchfe/Dockerfile .
+          # Check if Dockerfile exists
+          if [ ! -f twitchfe/Dockerfile ]; then
+            echo "ERROR: Frontend Dockerfile not found at twitchfe/Dockerfile"
+            exit 1
+          fi
 
-      # Backend: Build and Push (Skip tests that require a database)
-      - name: Build Backend (Skip Tests)
+          echo "Frontend Dockerfile contents:"
+          cat twitchfe/Dockerfile
+
+          # Build the image with more verbose output
+          echo "Building frontend image..."
+          docker build -t frontend-test:latest -f twitchfe/Dockerfile .
+
+          # Verify the image was built
+          echo "Checking for frontend image:"
+          docker images | grep frontend-test
+
+          # If image doesn't exist, show error
+          if [ $? -ne 0 ]; then
+            echo "ERROR: frontend image was not built successfully"
+            exit 1
+          fi
+
+      - name: Build Backend with debugging
         run: |
-          # Build the backend with tests skipped
+          # Check if Dockerfile exists
+          if [ ! -f twitchbe/Dockerfile ]; then
+            echo "ERROR: Backend Dockerfile not found at twitchbe/Dockerfile"
+            exit 1
+          fi
+
+          echo "Backend Dockerfile contents:"
+          cat twitchbe/Dockerfile
+
+          # Build with verbose output
+          echo "Building backend image..."
           docker build -t backend-test:latest -f twitchbe/Dockerfile .
+
+          # Verify the image was built
+          echo "Checking for backend image:"
+          docker images | grep backend-test
+
+          # If image doesn't exist, show error
+          if [ $? -ne 0 ]; then
+            echo "ERROR: backend image was not built successfully"
+            exit 1
+          fi
 
       # Push images to ECR if tests pass
       - name: Push Frontend Image to ECR
         run: |
+          # Verify image exists before pushing
+          if ! docker images | grep -q frontend-test; then
+            echo "ERROR: frontend-test image not found"
+            exit 1
+          fi
+
           # Tag with date for versioning
           TIMESTAMP=$(date +%Y%m%d%H%M)
+          echo "Tagging frontend image with timestamp: $TIMESTAMP"
+
           # Push with specific version tag
+          echo "Tagging and pushing frontend:$TIMESTAMP"
           docker tag frontend-test:latest ${{ env.AWS_ECR_URI }}/frontend:$TIMESTAMP
           docker push ${{ env.AWS_ECR_URI }}/frontend:$TIMESTAMP
+
           # Also push as latest
+          echo "Tagging and pushing frontend:latest"
           docker tag frontend-test:latest ${{ env.AWS_ECR_URI }}/frontend:latest
           docker push ${{ env.AWS_ECR_URI }}/frontend:latest
+
           # Save timestamp for later use
           echo "FRONTEND_VERSION=$TIMESTAMP" >> $GITHUB_ENV
 
       - name: Push Backend Image to ECR
         run: |
+          # Verify image exists before pushing
+          if ! docker images | grep -q backend-test; then
+            echo "ERROR: backend-test image not found"
+            exit 1
+          fi
+
           # Tag with date for versioning
           TIMESTAMP=$(date +%Y%m%d%H%M)
+          echo "Tagging backend image with timestamp: $TIMESTAMP"
+
           # Push with specific version tag
+          echo "Tagging and pushing backend:$TIMESTAMP"
           docker tag backend-test:latest ${{ env.AWS_ECR_URI }}/backend:$TIMESTAMP
           docker push ${{ env.AWS_ECR_URI }}/backend:$TIMESTAMP
+
           # Also push as latest
+          echo "Tagging and pushing backend:latest"
           docker tag backend-test:latest ${{ env.AWS_ECR_URI }}/backend:latest
           docker push ${{ env.AWS_ECR_URI }}/backend:latest
+
           # Save timestamp for later use
           echo "BACKEND_VERSION=$TIMESTAMP" >> $GITHUB_ENV
 
@@ -272,7 +296,10 @@ jobs:
             sudo aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ env.AWS_ECR_URI }}
 
             # Pull the latest images from ECR
+            echo "Pulling frontend image from ECR..."
             sudo docker pull ${{ env.AWS_ECR_URI }}/frontend:latest
+            
+            echo "Pulling backend image from ECR..."
             sudo docker pull ${{ env.AWS_ECR_URI }}/backend:latest
 
             # Create docker-compose.yml file
@@ -317,6 +344,7 @@ jobs:
             EOFDC
             
             # Start services
+            echo "Starting services with docker-compose..."
             sudo docker-compose up -d
             
             # Wait for services to start
@@ -327,10 +355,12 @@ jobs:
             echo "Running integration tests..."
             
             # Test frontend
+            echo "Testing frontend health endpoint..."
             FRONTEND_STATUS=0
             curl -v http://localhost:80/health || FRONTEND_STATUS=$?
             
             # Test backend
+            echo "Testing backend health endpoint..."
             BACKEND_STATUS=0
             curl -v http://localhost:8080/actuator/health || BACKEND_STATUS=$?
             
@@ -339,7 +369,10 @@ jobs:
               echo "Integration tests passed!"
               exit 0
             else
-              echo "Integration tests failed!"
+              echo "Integration tests failed! Frontend status: $FRONTEND_STATUS, Backend status: $BACKEND_STATUS"
+              # Show logs for debugging
+              echo "Container logs:"
+              sudo docker-compose logs
               exit 1
             fi
           EOF
@@ -348,6 +381,7 @@ jobs:
       - name: Remove Images from ECR if Tests Fail
         if: failure()
         run: |
+          echo "Tests failed, removing images from ECR..."
           aws ecr batch-delete-image --repository-name frontend --image-ids imageTag=latest
           aws ecr batch-delete-image --repository-name backend --image-ids imageTag=latest
 
@@ -355,6 +389,7 @@ jobs:
       - name: Terminate EC2 Instance
         if: always()
         run: |
+          echo "Terminating EC2 instance $EC2_INSTANCE_ID..."
           aws ec2 terminate-instances --instance-ids $EC2_INSTANCE_ID
 
   deploy-qa:
@@ -374,22 +409,28 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i <(echo "${{ secrets.EC2_SSH_KEY }}") ec2-user@${{ secrets.EC2_QA_PUBLIC_IP }} << EOF
             # Login to ECR
+            echo "Logging in to ECR..."
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.AWS_ECR_URI }}
             
             # Pull latest images
+            echo "Pulling latest images from ECR..."
             docker pull ${{ env.AWS_ECR_URI }}/frontend:latest
             docker pull ${{ env.AWS_ECR_URI }}/backend:latest
             
             # Stop running containers
+            echo "Stopping current containers..."
             docker-compose down
             
             # Start containers with new images
+            echo "Starting containers with new images..."
             docker-compose up -d
             
             # Verify deployment
             echo "Verifying deployment..."
             sleep 15
+            echo "Checking frontend health..."
             curl -s http://localhost:80/health
+            echo "Checking backend health..."
             curl -s http://localhost:8080/actuator/health
             echo "Deployment complete!"
           EOF
